--- a/img/style.css
+++ b/img/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nov4ho');
-  src:  url('fonts/icomoon.eot?nov4ho#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nov4ho') format('truetype'),
-    url('fonts/icomoon.woff?nov4ho') format('woff'),
-    url('fonts/icomoon.svg?nov4ho#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?yjeoi6');
+  src:  url('fonts/icomoon.eot?yjeoi6#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?yjeoi6') format('truetype'),
+    url('fonts/icomoon.woff?yjeoi6') format('woff'),
+    url('fonts/icomoon.svg?yjeoi6#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
